--- a/src/App.css
+++ b/src/App.css
@@ -67,11 +67,36 @@ body{
   cursor: pointer;
 }
 
+.button:active {
+  outline-color: transparent;
+  outline-style:solid;
+  box-shadow: 0 0 0 4px #5a01a7;
+}
 
+.button:hover {
+  transform: translateY(-2px);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+}
+
+.selected-die-face{
+  background-color: #59E391;
+  border-radius: 10px;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+}
 
 
 @media screen and (min-width: 400px) {
   .dice-container > .die-face {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .dice-container > .selected-die-face {
     width: 50px;
     height: 50px;
     display: flex;
